# firmwares.provisioning

./: .gitignore  CMakeLists.txt  README.md  partitions_core.csv  platformio.ini  sdkconfig.core_esp32dev  sdkconfig.defaults
.github/workflows/: pages.yml
components/core/: CMakeLists.txt
components/core/include/: core.h  core_build_info.h  core_data_queue.h  core_mqtt_process.h  core_runtime_constants.h  core_thresholds.h
components/core/src/: core_app.cpp  core_ble.cpp  core_button_led.cpp  core_data_queue.cpp  core_http.cpp  core_internal.h  core_mqtt.cpp  core_mqtt_process.cpp  core_storage.cpp
docs/: field-runbooks.html  index.html  mqtt-cloud.html  provisioning.html  reference.html  storage-ota.html
docs/assets/: app.js  mermaid-init.js  page.js  styles.css
src/: CMakeLists.txt
src/core/: main.cpp
